# botflow

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml  start.sh
botengine/: CLAUDE.md  __init__.py  browser.py  confidence.py  engine.py  exceptions.py  flow.py  healer.py  logger.py  models.py  resolver.py
botengine/actions/: __init__.py  click.py  extract.py  fill.py  navigate.py  registry.py  screenshot.py  type.py  wait.py
botengine/resolvers/: __init__.py  aria.py  css.py  fuzzy.py  llm_vision.py  text.py  xpath.py
botflow/: __init__.py  client.py  exceptions.py  models.py  sync_client.py
dashboard/: CLAUDE.md  app.py
dashboard/src/: dashboard.js
dashboard/templates/: base.html  flow_detail.html  heal_review.html  index.html  run_detail.html
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  AUTO_HEAL.md  FLOW_FORMAT.md
examples/betting_bot/: CLAUDE.md  bot.py  config.py  strategy.py
flows/: Betclic check BTTS odds live.flow.json  Betclic check BTTS odds.flow.json  Betclic extract game info.flow.json  Betclic login.flow.json  Betclic test w bb.flow.json  test_rec.flow.json
flows/schema/: flow.schema.json
recorder/: CLAUDE.md  server.py
recorder/src/: recorder.js
recorder/templates/: docs.html  index.html
scripts/: build.sh  dev_setup.sh  run_example.sh  run_flow.py
tests/: CLAUDE.md  conftest.py
tests/fixtures/: sample.flow.json
tests/integration/: test_engine_e2e.py  test_recorder.py
tests/unit/: test_actions.py  test_browser.py  test_client.py  test_confidence.py  test_flow.py  test_healer.py  test_models.py  (+1 more)
(+4 files in other folders)
