[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botflow"
version = "0.1.0"
description = "Intelligent Bot Automation Framework with auto-healing"
readme = "docs/ARCHITECTURE.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Avicenna.ai" },
]
dependencies = [
    "playwright>=1.48.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "anthropic>=0.40.0",
    "structlog>=24.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
botflow-recorder = "recorder.server:main"
botflow-dashboard = "dashboard.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["botengine", "recorder", "dashboard", "botflow"]
